[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "medical-triage-env"
version = "0.1.0"
description = "Meta PyTorch Hackathon: Medical ER Triage Nurse OpenEnv"
authors = [
    {name = "AI Engineer"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "websockets>=11.0.3",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "openenv-core",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/openenv/medical-triage-env"
